@@ -7,6 +7,8 @@ xine-lib (1.1.12.1) 2008-??-??
       in CVE-2008-1482, backport more calloc usage from 1.2 branch.
   * Added MIME types and .mpp for musepack.
   * Fixed display of some MJPEG streams (YUVJ420P).
+  * Deprecate xine_xmalloc() function, see src/xine-utils/utils.c for more
+    information about the reason.
 
 xine-lib (1.1.12) 2008-04-14
   * Security fixes:
